initial module port

--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "name": "@nec-network/redux-namespaces",
+  "name": "redux-namespaces",
   "version": "0.0.0",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
   "description": "Namespaces for Redux actions, reducers and state.",
-  "author": "Network Development <networkdevelopment@mi9.com.au>",
-  "license": "UNLICENSED",
-  "publishConfig": {
-    "registry": "http://npm.9msn.net:4873"
-  },
+  "keywords": [
+    "redux",
+    "namespace",
+    "multiple",
+    "action",
+    "reducer",
+    "state"
+  ],
+  "author": "9Technology <opensource@nine.com.au>",
+  "license": "BSD-3-Clause",
   "scripts": {
     "prepublish": "gulp build",
     "build": "gulp build",
     "lint": "eslint src",
     "pretest": "npm run lint",
-    "test": "jest",
-    "ci": "npm test -- --config jest.config.json",
-    "prepush": "npm test"
+    "test": "jest"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0"
+    "babel-runtime": "^6.23.0",
+    "invariant": "^2.2.2",
+    "lodash": "^4.17.4",
+    "reduce-reducers": "^0.1.2",
+    "redux-actions": "^2.0.3"
   },
   "devDependencies": {
-    "@nec-network/babel-preset-universal": "~0.0.3",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^19.0.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-register": "^6.9.0",
     "del": "^2.2.1",
     "eslint": "^3.13.1",
@@ -35,14 +45,17 @@
     "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "husky": "^0.13.2",
     "jest": "^19.0.2",
-    "jest-teamcity-reporter": "^0.4.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
+    "redux": "^3.7.0",
     "run-sequence": "^1.2.2"
   },
   "jest": {
-    "collectCoverage": true
+    "verbose": true,
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ]
   }
 }
