--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,20 @@
 {
   "presets": [
-    "@nec-network/babel-preset-universal"
+    ["env", {
+      "targets": {
+        "node": "current"
+      },
+      "exclude": [
+        "transform-regenerator"
+      ]
+    }]
+  ],
+  "plugins": [
+    ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": false
+    }],
+    "transform-export-extensions",
+    "transform-object-rest-spread"
   ]
 }
