removing lodash and redux-actions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-namespaces",
-  "version": "0.0.0",
+  "version": "0.0.0-0",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
   "description": "Namespaces for Redux actions, reducers and state.",
@@ -15,41 +15,55 @@
   "author": "9Technology <opensource@nine.com.au>",
   "license": "BSD-3-Clause",
   "scripts": {
-    "prepublish": "gulp build",
-    "build": "gulp build",
+    "clean": "rimraf lib dist",
+    "prepublish": "npm run build",
+    "build": "npm run clean && npm run build:lib && npm run build:dist && npm run build:min",
+    "build:lib": "cross-env BABEL_ENV=build babel -d lib src",
+    "build:dist": "rollup -c -i src/index.js -o dist/redux-namespaces.js",
+    "build:min": "uglifyjs -c -m -o dist/redux-namespaces.min.js dist/redux-namespaces.js",
     "lint": "eslint src",
     "pretest": "npm run lint",
     "test": "jest"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0",
+    "array-flatten": "^2.1.1",
+    "camelcase": "^4.1.0",
     "invariant": "^2.2.2",
-    "lodash": "^4.17.4",
+    "is-empty": "^1.2.0",
+    "is-function": "^1.0.1",
+    "is-string": "^1.0.4",
+    "object.omit": "^2.0.1",
     "reduce-reducers": "^0.1.2",
-    "redux-actions": "^2.0.3"
+    "starts-with": "^1.0.2",
+    "to-snake-case": "^1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^19.0.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
-    "babel-register": "^6.9.0",
-    "del": "^2.2.1",
+    "cross-env": "^5.0.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jest": "^19.0.1",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "jest": "^19.0.2",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "redux": "^3.7.0",
-    "run-sequence": "^1.2.2"
+    "rimraf": "^2.6.1",
+    "rollup": "^0.43.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "uglify-js": "^3.0.18"
   },
   "jest": {
     "verbose": true,
