--- a/.babelrc
+++ b/.babelrc
@@ -2,19 +2,25 @@
   "presets": [
     ["env", {
       "targets": {
-        "node": "current"
+        "node": "current",
+        "uglify": true
       },
+      "modules": false,
       "exclude": [
         "transform-regenerator"
       ]
     }]
   ],
   "plugins": [
-    ["transform-runtime", {
-      "polyfill": false,
-      "regenerator": false
-    }],
+    "external-helpers",
     "transform-export-extensions",
     "transform-object-rest-spread"
-  ]
+  ],
+  "env": {
+    "build": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
