--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "clean": "rimraf lib dist",
     "prepublish": "npm run build",
     "build": "npm run clean && npm run build:lib && npm run build:dist && npm run build:min",
-    "build:lib": "cross-env BABEL_ENV=build babel -d lib src",
-    "build:dist": "rollup -c -i src/index.js -o dist/redux-namespaces.js",
+    "build:lib": "cross-env BABEL_ENV=lib babel -d lib src",
+    "build:dist": "cross-env BABEL_ENV=dist rollup -c -i src/index.js -o dist/redux-namespaces.js",
     "build:min": "uglifyjs -c -m -o dist/redux-namespaces.min.js dist/redux-namespaces.js",
     "lint": "eslint src",
     "pretest": "npm run lint",
@@ -27,32 +27,34 @@
   },
   "dependencies": {
     "array-flatten": "^2.1.1",
-    "camelcase": "^4.1.0",
     "invariant": "^2.2.2",
     "is-empty": "^1.2.0",
     "is-function": "^1.0.1",
     "is-string": "^1.0.4",
     "object.omit": "^2.0.1",
     "reduce-reducers": "^0.1.2",
-    "starts-with": "^1.0.2",
-    "to-snake-case": "^1.0.0"
+    "starts-with": "^1.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
-    "babel-jest": "^19.0.0",
+    "babel-jest": "^20.0.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-flow": "^6.23.0",
     "cross-env": "^5.0.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-flowtype": "^2.34.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jest": "^19.0.1",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "flow-bin": "^0.49.1",
+    "flow-typed": "^2.1.2",
     "jest": "^19.0.2",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
