--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-plugin-react": "^6.9.0",
     "flow-bin": "^0.49.1",
     "flow-typed": "^2.1.2",
-    "jest": "^19.0.2",
+    "jest": "^20.0.4",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "redux": "^3.7.0",
@@ -72,6 +72,9 @@
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "src/index.js"
     ]
   }
 }
