--- a/package.json
+++ b/package.json
@@ -56,13 +56,14 @@
     "babel-jest": "^24.8.0",
     "coveralls": "^3.0.6",
     "cross-env": "^5.0.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^18.0.0",
     "eslint-plugin-flowtype": "^2.34.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "flow-bin": "^0.49.1",
     "flow-typed": "^2.1.2",
     "jest": "^24.8.0",
@@ -70,7 +71,7 @@
     "react-dom": "^15.5.3",
     "redux": "^3.7.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.43.0",
+    "rollup": "^0.60.0",
     "rollup-plugin-babel": "^4.0.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
