reverting some of the auto-fomatting done by vscode plugin, using lts name for node version

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.json,.babelrc,.eslintrc}]
+[{*.json,*.yml,.babelrc,.eslintrc}]
 indent_size = 2
 
 [Makefile]
